# applications/dashboard/controllers/api/AiSuggestionsApiController.php
@@ -7,19 +7,11 @@
 
 namespace Vanilla\Dashboard\Controllers\Api;
 
-use CommentModel;
-use Garden\EventManager;
-use Garden\Schema\ValidationException;
 use Garden\Utils\ArrayUtils;
 use Garden\Web\Data;
-use Garden\Web\Exception\ClientException;
-use Garden\Web\Exception\ForbiddenException;
-use Gdn;
 use Vanilla\Contracts\ConfigurationInterface;
-use Vanilla\Dashboard\Events\AiSuggestionAccessEvent;
 use Vanilla\Dashboard\Models\AiSuggestionSourceService;
 use Vanilla\FeatureFlagHelper;
-use Vanilla\Logging\AuditLogger;
 
 /**
  * API Controller for the `/ai-suggestions` resource.
@@ -55,44 +47,31 @@ class AiSuggestionsApiController extends \AbstractApiController
     const ASSISTANT_USER_MAP = [
         "name" => "Name",
         "icon" => "Photo",
+        "tone" => "Attributes.AiSuggestions.Tone",
+        "level" => "Attributes.AiSuggestions.Level",
     ];
 
     protected ConfigurationInterface $config;
 
     protected \UserModel $userModel;
 
-    protected \UserMetaModel $userMetaModel;
-
-    /** @var CommentModel  */
-    private CommentModel $commentModel;
     protected AiSuggestionSourceService $suggestionSourceService;
-
-    protected bool $auditLogEnabled = true;
-
-    protected \DiscussionsApiController $discussionsApi;
 
     /**
      * D.I
      *
      * @param ConfigurationInterface $config
      * @param \UserModel $userModel
-     * @param CommentModel $commentModel
      * @param AiSuggestionSourceService $suggestionSourceService
      */
     public function __construct(
         ConfigurationInterface $config,
         \UserModel $userModel,
-        \UserMetaModel $userMetaModel,
-        CommentModel $commentModel,
-        AiSuggestionSourceService $suggestionSourceService,
-        \DiscussionsApiController $discussionsApi
+        AiSuggestionSourceService $suggestionSourceService
     ) {
         $this->config = $config;
         $this->userModel = $userModel;
-        $this->userMetaModel = $userMetaModel;
-        $this->commentModel = $commentModel;
         $this->suggestionSourceService = $suggestionSourceService;
-        $this->discussionsApi = $discussionsApi;
     }
 
     /**
@@ -109,22 +88,19 @@ class AiSuggestionsApiController extends \AbstractApiController
             [
                 "enabled:b" => ["default" => false],
                 "name:s" => ["default" => ""],
-                "icon:s?",
-                "toneOfVoice:s" => ["enum" => self::TONES, "default" => self::TONE_FRIENDLY],
-                "levelOfTech:s" => ["enum" => self::LEVELS, "default" => self::LEVEL_LAYMAN],
-                "useBrEnglish:b?" => ["default" => false],
+                "icon:s" => ["default" => ""],
+                "tone:s" => ["enum" => self::TONES, "default" => self::TONE_FRIENDLY],
+                "level:s" => ["enum" => self::LEVELS, "default" => self::LEVEL_LAYMAN],
                 "sources?" => $this->suggestionSourceService->getSourcesSchema(),
             ],
             "out"
         );
 
         $settings = $this->config->get("aiSuggestions", []);
-        $assistantUserID = $settings["userID"] ?? null;
-        $assistantUser = $this->userModel->getID($assistantUserID, DATASET_TYPE_ARRAY);
-        if (!empty($assistantUser)) {
+        if (!empty($settings["userID"])) {
+            $assistantUser = $this->userModel->getID($settings["userID"], DATASET_TYPE_ARRAY);
             $assistantUser = ArrayUtils::remapProperties($assistantUser, self::ASSISTANT_USER_MAP);
-            $meta = $this->userMetaModel->getUserMeta($assistantUserID, "aiAssistant.%", prefix: "aiAssistant.");
-            $settings = $meta + $assistantUser + $settings;
+            $settings = $assistantUser + $settings;
         }
 
         $settings = $out->validate($settings);
@@ -145,20 +121,17 @@ class AiSuggestionsApiController extends \AbstractApiController
         $in = $this->schema([
             "enabled:b",
             "name:s",
-            "icon:s?",
-            "toneOfVoice:s" => ["enum" => self::TONES],
-            "levelOfTech:s" => ["enum" => self::LEVELS],
-            "useBrEnglish:b?" => ["default" => false],
+            "icon:s",
+            "tone:s" => ["enum" => self::TONES],
+            "level:s" => ["enum" => self::LEVELS],
             "sources" => $this->suggestionSourceService->getSettingsSchema(),
         ]);
 
         $body = $in->validate($body);
-        $signInEvent = new AiSuggestionAccessEvent("configUpdate", $body);
-        AuditLogger::log($signInEvent);
 
-        if ($body["enabled"]) {
-            $this->createOrUpdateAssistant($body);
-        }
+        $assistantUser = ArrayUtils::pluck($body, ["name", "icon", "tone", "level"]);
+        $assistantUser = ArrayUtils::remapProperties($assistantUser, array_flip(self::ASSISTANT_USER_MAP), true);
+        $this->createOrUpdateAssistant($assistantUser);
 
         $settings = ArrayUtils::pluck($body, ["enabled", "sources"]);
         foreach ($settings as $name => $setting) {
@@ -184,89 +157,6 @@ class AiSuggestionsApiController extends \AbstractApiController
     }
 
     /**
-     * Dismiss suggestions by the given IDs for a discussion.
-     *
-     * @param array $body
-     * @return Data
-     */
-    public function post_dismiss(array $body): Data
-    {
-        if (!$this->suggestionSourceService->suggestionEnabled()) {
-            throw new ClientException("AI Suggestions is not enabled.");
-        }
-        $in = $this->schema(["discussionID:i", "suggestionIDs:a" => ["items" => ["type" => "integer"]]]);
-        $body = $in->validate($body);
-
-        $discussion = $this->discussionsApi->discussionByID($body["discussionID"]);
-        $this->checkPermission($discussion);
-
-        $this->suggestionSourceService->toggleSuggestions($discussion, $body["suggestionIDs"]);
-        return new Data([], 204);
-    }
-
-    /**
-     * Restore all suggestions for the given discussion ID.
-     *
-     * @param array $body
-     * @return Data
-     */
-    public function post_restore(array $body): Data
-    {
-        if (!$this->suggestionSourceService->suggestionEnabled()) {
-            throw new ClientException("AI Suggestions is not enabled.");
-        }
-        $in = $this->schema(["discussionID:i"]);
-        $body = $in->validate($body);
-
-        $discussion = $this->discussionsApi->discussionByID($body["discussionID"]);
-        $this->checkPermission($discussion);
-
-        $this->suggestionSourceService->toggleSuggestions($discussion, hide: false);
-        return new Data([], 204);
-    }
-
-    /**
-     * Hide/show suggestions by the given discussion IDs.
-     *
-     * @param array $body
-     * @return Data
-     */
-    public function post_suggestionsVisibility(array $body): Data
-    {
-        if (!$this->suggestionSourceService->suggestionEnabled()) {
-            throw new ClientException("AI Suggestions is not enabled.");
-        }
-        $in = $this->schema(["discussionID:i", "visible:b"]);
-        $body = $in->validate($body);
-
-        $discussion = $this->discussionsApi->discussionByID($body["discussionID"]);
-        $this->checkPermission($discussion);
-
-        $this->suggestionSourceService->updateVisibleSuggestions($discussion, $body["visible"]);
-        return new Data([], 204);
-    }
-
-    /**
-     * Check if a user has the correct permission.
-     *
-     * @param array $discussion
-     * @return void
-     * @throws ForbiddenException
-     */
-    private function checkPermission(array $discussion): void
-    {
-        if (\Gdn::session()->checkPermission("curation.manage")) {
-            return;
-        }
-
-        if (\Gdn::session()->UserID === $discussion["InsertUserID"]) {
-            return;
-        }
-
-        throw new ForbiddenException("You are not allowed to use suggestions.");
-    }
-
-    /**
      * Create the AI assistant user and store the userID in the config, or update the user with the stored userID.
      *
      * @param array $data
@@ -276,118 +166,19 @@ class AiSuggestionsApiController extends \AbstractApiController
     {
         $assistantUserID = $this->config->get("aiSuggestions.userID");
         $assistantUserID = $this->userModel->getWhere(["UserID" => $assistantUserID])->value("UserID");
-        $userData = ArrayUtils::pluck($data, ["name", "icon"]);
-        $userData = ArrayUtils::remapProperties($userData, array_flip(self::ASSISTANT_USER_MAP), true);
-        $userData = array_filter($userData, fn($value) => !is_null($value));
 
         if (empty($assistantUserID)) {
             $assistantUserID = $this->userModel->save(
-                $userData + [
+                [
                     "Password" => randomString("20"),
                     "HashMethod" => "Random",
                     "Email" => "ai-assistant@stub.vanillacommunity.example",
-                    "Photo" => \UserModel::getDefaultAvatarUrl(),
-                ]
+                ] + $data
             );
+            $this->config->saveToConfig("aiSuggestions.userID", (int) $assistantUserID);
         } else {
-            $this->userModel->save(["UserID" => $assistantUserID] + $userData);
+            $this->userModel->save(["UserID" => $assistantUserID] + $data);
         }
         $this->validateModel($this->userModel);
-        $this->userMetaModel->setUserMeta($assistantUserID, "aiAssistant.toneOfVoice", $data["toneOfVoice"]);
-        $this->userMetaModel->setUserMeta($assistantUserID, "aiAssistant.levelOfTech", $data["levelOfTech"]);
-        $this->userMetaModel->setUserMeta($assistantUserID, "aiAssistant.useBrEnglish", $data["useBrEnglish"]);
-        $this->config->saveToConfig("aiSuggestions.userID", (int) $assistantUserID);
-    }
-
-    /**
-     * Accept suggestions as accepted answers.
-     *
-     * @param array $data
-     *
-     * @return Data
-     * @throws ClientException|\Garden\Schema\ValidationException
-     */
-    public function post_acceptSuggestion(array $data): Data
-    {
-        if (!$this->suggestionSourceService->suggestionEnabled()) {
-            throw new ClientException("AI Suggestions are not enabled.");
-        }
-        $in = $this->schema([
-            "allSuggestions:b",
-            "discussionID:i",
-            "suggestionIDs:a?" => [
-                "items" => [
-                    "type" => "integer",
-                ],
-                "description" => "List of discussion IDs to delete.",
-                "maxItems" => 3,
-            ],
-        ]);
-
-        $body = $in->validate($data);
-
-        $discussion = $this->discussionsApi->discussionByID($body["discussionID"]);
-        $this->checkPermission($discussion);
-
-        $signInEvent = new AiSuggestionAccessEvent("acceptSuggestion", $body);
-        AuditLogger::log($signInEvent);
-        $schema = $this->commentModel->schema();
-        $eventManager = Gdn::getContainer()->get(EventManager::class);
-        $eventManager->fire("aiSuggestionsApiController_normalizeComment", $schema);
-
-        $out = $this->schema(
-            [
-                ":a" => $schema,
-            ],
-            "out"
-        );
-
-        $comments = $this->suggestionSourceService->createComments(
-            $body["discussionID"],
-            $body["allSuggestions"] ? [0, 1, 2] : $body["suggestionIDs"]
-        );
-
-        $comments = $out->validate($comments);
-        return new Data($comments);
-    }
-
-    /**
-     * Cancel accepted comment suggestions.
-     *
-     * @param array $data
-     *
-     * @return Data
-     * @throws ClientException|\Garden\Schema\ValidationException
-     */
-    public function post_removeAcceptSuggestion(array $data): Data
-    {
-        if (!$this->suggestionSourceService->suggestionEnabled()) {
-            throw new ClientException("AI Suggestions are not enabled.");
-        }
-        $in = $this->schema([
-            "allSuggestions:b",
-            "discussionID:i",
-            "suggestionIDs:a?" => [
-                "items" => [
-                    "type" => "integer",
-                ],
-                "description" => "List of discussion IDs to delete.",
-                "maxItems" => 3,
-            ],
-        ]);
-
-        $body = $in->validate($data);
-
-        $discussion = $this->discussionsApi->discussionByID($body["discussionID"]);
-        $this->checkPermission($discussion);
-
-        $signInEvent = new AiSuggestionAccessEvent("removeSuggestion", $body);
-        AuditLogger::log($signInEvent);
-
-        $status = $this->suggestionSourceService->deleteComments(
-            $body["discussionID"],
-            $body["allSuggestions"] ? [0, 1, 2] : $body["suggestionIDs"]
-        );
-        return new Data(["removed" => $status]);
     }
 }
