# applications/dashboard/openapi/ai-suggestions.yml
@@ -37,152 +37,6 @@ paths:
                     $ref: "responses.yml#/components/responses/PermissionError"
                 "422":
                     description: Validation Failed
-    /ai-suggestions/dismiss:
-        x-hidden: true
-        post:
-            summary: Dismiss suggestions for a given discussion.
-            tags:
-                - AI Suggestions
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                discussionID:
-                                    type: integer
-                                suggestionIDs:
-                                    type: array
-                                    items:
-                                        type: integer
-                                    description: Array of suggestion indices to dismiss
-                            required:
-                                - discussionID
-                                - suggestionIDs
-            responses:
-                "204":
-                    description: Success
-                "403":
-                    description: Forbidden
-                "422":
-                    description: Validation Failed
-    /ai-suggestions/restore:
-        x-hidden: true
-        post:
-            summary: Restore suggestions for a given discussion.
-            tags:
-                - AI Suggestions
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                discussionID:
-                                    type: integer
-                            required:
-                                - discussionID
-            responses:
-                "204":
-                    description: Success
-                "403":
-                    description: Forbidden
-                "422":
-                    description: Validation Failed
-
-    /ai-suggestions/suggestions-visibility:
-        x-hidden: true
-        post:
-            summary: Change the visibility of all suggestions for a given discussion.
-            tags:
-                - AI Suggestions
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                discussionID:
-                                    type: integer
-                                visible:
-                                    type: boolean
-                            required:
-                                - discussionID
-                                - visible
-            responses:
-                "204":
-                    description: Success
-                "403":
-                    description: Forbidden
-                "422":
-                    description: Validation Failed
-    /ai-suggestions/accept-suggestion:
-        x-hidden: true
-        post:
-            summary: Accept a suggestion.
-            tags:
-                - AI Suggestions
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                discussionID:
-                                    type: integer
-                                allSuggestions:
-                                    type: boolean
-                                suggestionIDs:
-                                    type: array
-                                    items:
-                                        type: integer
-                            required:
-                                - discussionID
-            responses:
-                "200":
-                    content:
-                        "application/json":
-                            schema:
-                                items:
-                                    $ref: "../../vanilla/openapi/comments.yml#/components/schemas/Comment"
-                                type: array
-                    description: Success
-                "403":
-                    $ref: "responses.yml#/components/responses/PermissionError"
-    /ai-suggestions/remove-accept-suggestion:
-        x-hidden: true
-        post:
-            summary: Remove Accept a suggestion.
-            tags:
-                - AI Suggestions
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                discussionID:
-                                    type: integer
-                                allSuggestions:
-                                    type: boolean
-                                suggestionIDs:
-                                    type: array
-                                    items:
-                                        type: integer
-                            required:
-                                - discussionID
-            responses:
-                "200":
-                    content:
-                        "application/json":
-                            schema:
-                                properties:
-                                    removed:
-                                        description: Status of removal of comments.
-                                        type: boolean
-                    description: Success
-                "403":
-                    $ref: "responses.yml#/components/responses/PermissionError"
 components:
     schemas:
         AISuggestionsSettingsRequest:
@@ -194,13 +48,13 @@ components:
                     type: string
                 icon:
                     type: string
-                toneOfVoice:
+                tone:
                     type: string
                     enum:
                         - friendly
                         - professional
                         - technical
-                levelOfTech:
+                level:
                     type: string
                     enum:
                         - layman
@@ -208,15 +62,14 @@ components:
                         - balanced
                         - advanced
                         - technical
-                useBritishEnglish:
-                    type: boolean
                 sources:
                     $ref: "#/components/schemas/SuggestionSources"
             required:
                 - enabled
                 - name
-                - toneOfVoice
-                - levelOfTech
+                - icon
+                - tone
+                - level
                 - sources
 
         AISuggestionsSettingsResponse:
@@ -228,13 +81,13 @@ components:
                     type: string
                 icon:
                     type: string
-                toneOfVoice:
+                tone:
                     type: string
                     enum:
                         - friendly
                         - professional
                         - technical
-                levelOfTech:
+                level:
                     type: string
                     enum:
                         - layman
@@ -242,8 +95,6 @@ components:
                         - balanced
                         - advanced
                         - technical
-                useBritishEnglish:
-                    type: boolean
                 sources:
                     $ref: "#/components/schemas/SuggestionSources"
         SuggestionSources:
